2003-10-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (GetFontAttributes): place extra check for NULL
	family against bad X servers.

	* win/tkWinImage.c (XGetImageZPixmap): add separate 16bpp
	XGetImage code to correctly handle 16bpp requests.  This appears
	to never have worked correctly.

	* tests/focusTcl.test (setup1): expand frame size to allow for
	correct visibility of windows that use larger default fonts.

2003-10-28  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/tk.tcl (::tk::PlaceWindow): Added check for empty string
	first when determining placement strategy. [Bug 819284]

2003-10-22  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/dialog.tcl (tk_dialog): Constrain the dialog to be
	fairly sensibly sized and placed.  [Bug 827535]

2003-10-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkInt.h:      move TkGetOptionSpec to stubs intDecls
	* generic/tkIntDecls.h:
	* generic/tkInt.decls:
	* generic/tkStubInit.c:

	* tests/listbox.test (13.3): correct result size
	(4.7): correct test for possible window drift [Bug #701931] (dgp)

	* unix/mkLinks:
	* doc/GetHWND.3: add Tk_AttachHWND docs [Bug #220803]

2003-10-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* mac/tkMacButton.c (TkpDisplayButton):
	* macosx/tkMacOSXButton.c (TkpDisplayButton):
	* unix/tkUnixButton.c (TkpDisplayButton): correct imageYOffset for
	buttons with just images.

2003-10-09  Jeff Hobbs	<jeffh@ActiveState.com>

	* win/tkWinButton.c (TkpDisplayButton): correct imageYOffset for
	buttons with just images.

2003-10-06  Don Porter	<dgp@users.sourceforge.net>

	* doc/ConfigWidg.3:	Removed reference to Tk_Offset from the
	NAME section to resolve mkLinks conflict with SetOptions.3 [Bug 404197]

	* unix/configure.in:	Reconfigured to use $TCL_PREFIX as the
	default value of --prefix, and also added warning when a TK_PREFIX
	value different from TCL_PREFIX is selected, since [package require Tk]
	fails in that configuration. [Bugs 428627,765642]
