@@ -1,3 +1,9 @@
+2003-10-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* library/tkfbox.tcl (IconList_Create,IconList_Add): Added option
+	munging to allow some control of foreground colours on Unix in the
+	same way that you can influence the background.  [Bug 795717]
+
 2003-10-28  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* unix/tkUnixFont.c (GetFontAttributes): place extra check for NULL
